# ThermAL

./: .gitignore  README.md  ReadME.md  ThermAL.ipynb  pyproject.toml
AA/Predicted_fitness/: predicted_fitness.xlsx
AA/Predicted_fitness_with_1_letter_mutations/: Predicted_fitness_with_1_letter_mutations.xlsx
AA/Sequence's_AAC_DPC/: Sequence's_AAC_DPC.xlsx
AA/heatmap/: heatmap_simple.xlsx  heatmap_with_WT_sequence.xlsx
AA/sequence_variants/: sequence_variants.xlsx
AA/sequences_with_features/: sequences_with_features.xlsx
src/tpbla_thermal/: cli.py
